[project]
name = "kjob"
version = "0.1.0"
description = "A poor mans version of distributed computing"
authors = [
    {name = "evokerking",email = "cjpontius10@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "icmplib (>=3.0.4,<4.0.0)",
    "py7zr (>=1.1.0,<2.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "paramiko (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
